# Word-waker

./: .gitignore  Cargo.toml  README.md
audio_capture/: Cargo.toml  README.md  backlog.md  build.rs  stack.md
audio_capture/benches/: ring_buffer_bench.rs
daemon/: Cargo.toml  backlog.md  stack.md
daemon/src/: config.rs  main.rs  pipeline.rs
inference_ml/: Cargo.toml  README.md  backlog.md  build.rs  stack.md
inference_ml/benches/: inference_bench.rs
inference_ml/examples/: instruments_loop.rs  standalone_inference.rs
inference_ml/fixtures/mock_model/: WakeWordMock.mlmodel
inference_ml/fixtures/mock_model/WakeWordMock.mlmodelc/: metadata.json  model.espresso.net  model.espresso.shape  model.espresso.weights
inference_ml/fixtures/real_model/: WakeWord_traced.pt  eval_results.json
inference_ml/fixtures/real_model/WakeWord.mlmodelc/: metadata.json  model.mil
inference_ml/fixtures/real_model/WakeWord.mlpackage/: Manifest.json
inference_ml/fixtures/real_model/WakeWord.mlpackage/Data/com.apple.CoreML/: model.mlmodel
inference_ml/scripts/: generate_mock_model.py
inference_ml/src/: config.rs  engine.rs  error.rs  ffi.rs  lib.rs  model.rs  runner.rs
inference_ml/src/bridge/: coreml_bridge.mm
inference_ml/tests/: inference_ml_integration.rs
integration_test/: Cargo.toml
integration_test/src/: lib.rs
integration_test/tests/: workspace_integration.rs
pipeline/: Cargo.toml  README.md  backlog.md  stack.md
pipeline/benches/: dsp_bench.rs
pipeline/examples/: generate_fixture.rs  instruments_loop.rs  standalone_dsp.rs
pipeline/fixtures/: numerical_references.json  reference_mfcc.json
pipeline/scripts/: generate_mfcc_reference.py  generate_numerical_references.py
pipeline/src/: lib.rs  main.rs
pipeline/src/pipeline_dsp/: config.rs  error.rs  ffi.rs  fft.rs  framing.rs  mel_filterbank.rs  mfcc.rs  mod.rs  pipeline.rs  preemphasis.rs  processor.rs  runner.rs  windowing.rs
pipeline/tests/: pipeline_dsp_integration.rs
trigger/: Cargo.toml  README.md  backlog.md  stack.md
trigger/src/: lib.rs
(+22 files in other folders)
