[package]
name = "inference_ml"
version = "0.1.0"
edition = "2021"

[features]
# Active un stub Rust qui contourne le FFI et retourne toujours 0.5
mock_model = []
# Active l'example exécutable en autonomie
standalone = []

[dependencies]
libc = "0.2"
anyhow = "1.0"
crossbeam-channel = "0.5"
tracing = "0.1"
tracing-subscriber = "0.3"

[build-dependencies]
cc = "1.0"
