[package]
name = "pipeline_dsp"
version = "0.1.0"
edition = "2021"

[features]
mock_input = []
standalone = []
skip_fixtures = []

[[example]]
name = "standalone_dsp"
required-features = ["standalone"]

[[example]]
name = "generate_fixture"
required-features = ["standalone"]

[dependencies]
libc = "0.2"
anyhow = "1.0"
crossbeam-channel = "0.5"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
approx = "0.5"
criterion = { version = "0.5", features = ["html_reports"] }
serde_json = "1.0"

[[bench]]
name = "dsp_bench"
harness = false
